[tool.poetry]
name = "iscc-cli"
version = "1.1.0-beta.17"
description = "ISCC CLI - Creates ISCC Codes from Media Files"
authors = ["Titusz Pan <tp@py7.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://iscc.codes/"
repository = "https://github.com/iscc/iscc-cli"
keywords = ["iscc", "media", "identifier", "blockchain", "cli", "generator"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    "Topic :: Multimedia",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Topic :: Software Development",
]

[tool.poetry.scripts]
iscc = 'iscc_cli.cli:cli'

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "^7.0"
iscc = { version = "1.1.0b17", allow-prereleases = true}
click-default-group = "^1.2"
colorama = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = { version = "^19.10b0", python = "^3.6" }
pyinstaller = "^4.7"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry==1.0.5", "setuptools"]
build-backend = "poetry.core.masonry.api"
